# wasip3-poc

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.devcontainer/: devcontainer.json  install_tooling.sh
app/: Cargo.toml
app/src/: error.rs  main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
wit/: deps.toml  toggler.wit
