[workspace]
resolver = "3"
members = ["app", "plugin"]
default-members = ["app"]

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"


[workspace.dependencies]
thiserror = { version = "=2.0.16", default-features = false }
tokio = { version = "=1.47.1", default-features = false }
wasi = { version = "=0.14.3+wasi-0.2.4", default-features = false }
wasm-bindgen = { version = "=0.2.101", default-features = false }
wasmtime = { version = "=37.0.0", git = "https://github.com/bytecodealliance/wasip3-prototyping", branch = "main", default-features = false }
wasmtime-wasi = { version = "=37.0.0", git = "https://github.com/bytecodealliance/wasip3-prototyping", branch = "main", default-features = false }
wit-bindgen = { version = "0.45.1", default-features = false }
wit-bindgen-rt = { version = "=0.44.0", default-features = false }

plugin = { path = "plugin" }

[profile.dev.package."*"]
opt-level = 3

# wasmi = {version = "0.51.1"}
# wasm_component_layer = { version = "=0.1.18" }
# wasmi_runtime_layer = { version = "=0.48.0" }
# wasmtime_runtime_layer = "21.0.0"
# js_wasm_runtime_layer = "0.4.0"
