[workspace]
resolver = "3"
members = ["app", "plugin"]
default-members = ["app"]

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
thiserror = { version = "=2.0.17", default-features = false }
tokio = { version = "=1.47.1", default-features = false }
wasi = { version = "=0.14.7", default-features = false }
wasm-bindgen = { version = "=0.2.104", default-features = false }
wasmtime = { version = "=37.0.1", default-features = false }
wasmtime-wasi = { version = "=37.0.1", default-features = false }
wit-bindgen = { version = "=0.46.0", default-features = false }
wit-bindgen-rt = { version = "=0.44.0", default-features = false }

plugin = { path = "plugin" }

[profile.dev.package."*"]
opt-level = 3
