[package]
name = "app"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros"] }
wasmtime = { workspace = true, features = ["async", "component-model-async", "cranelift", "std" ] }
wasmtime-wasi = { workspace = true, features = ["p3"] }
wit-bindgen = { workspace = true, features = ["async", "std"] }
