[package]
name = "plugin"
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi = { workspace = true, features = ["default"] }
wit-bindgen = { workspace = true, features = ["async", "macros", "std"]}
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
